--- a/main.ipynb
+++ b/main.ipynb
@@ -29789,6 +29789,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "6dc5beae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "numeros = ''.join(str(random.randint(0, 1)) for _ in range(8))\n",
+    "print(numeros)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "id": "c8d98d37",
    "metadata": {},
